Műszer egyedi előtt

--- a/szabalyozok/templates/szabalyozok/diagnosztika_tortenet.html
+++ b/szabalyozok/templates/szabalyozok/diagnosztika_tortenet.html
@@ -13,7 +13,7 @@
             <th>P2 ág alsó</th>
             <th>P2 ág felső</th>
             <th>Bizt.lef.nyom.</th>
-            <th>dátuma</th>
+            <th>Dátum</th>
             <th>Oka</th>
             <th>Megjegyzés</th>
         </tr>
