--- a/szabalyozok/templates/szabalyozok/terkep.html
+++ b/szabalyozok/templates/szabalyozok/terkep.html
@@ -94,7 +94,7 @@
                         });
                         arrMarkers[i] = marker;
                         var infowindow = new google.maps.InfoWindow({
-                            content: '<h3><a href="/szabalyozok/'+ item.id +'/show/" target="_blank">' + item.allomas_nev + '</a>'
+                            content: '<h3><a href="/szabalyozok/'+ item.id +'/show/" target="_blank">' + item.allomas_nev + '</a></h3>' + item.uz_prim_nyom + '/' + item.uz_sek_nyom
                         });
                         arrInfoWindows[i] = infowindow;
                         google.maps.event.addListener(marker, 'click', function () {
@@ -123,7 +123,7 @@
                         });
                         arrMarkers[i] = marker;
                         var infowindow = new google.maps.InfoWindow({
-                            content: '<h3><a href="/szabalyozok/'+ item.id +'/show/" target="_blank">' + item.allomas_nev + '</a>'
+                            content: '<h3><a href="/szabalyozok/'+ item.id +'/show/" target="_blank">' + item.allomas_nev + '</a></h3>' + item.uz_prim_nyom + '/' + item.uz_sek_nyom
                         });
                         arrInfoWindows[i] = infowindow;
                         google.maps.event.addListener(marker, 'click', function () {
@@ -153,7 +153,7 @@
                         });
                         arrMarkers[i] = marker;
                         var infowindow = new google.maps.InfoWindow({
-                            content: '<h3><a href="/szabalyozok/'+ item.id +'/show/" target="_blank">' + item.allomas_nev + '</a>'
+                            content: '<h3><a href="/szabalyozok/'+ item.id +'/show/" target="_blank">' + item.allomas_nev + '</a></h3>' + item.uz_prim_nyom + '/' + item.uz_sek_nyom
                         });
                         arrInfoWindows[i] = infowindow;
                         google.maps.event.addListener(marker, 'click', function () {
