--- a/szabalyozok/templates/szabalyozok/muszer_tortenet.html
+++ b/szabalyozok/templates/szabalyozok/muszer_tortenet.html
@@ -24,8 +24,8 @@
         <tbody>
         {% for muszer in muszerek %}
         <tr>
-            <td>{{ muszer.muszer.muszerfajta }}</td>
-            <td>{{ muszer.muszer.muszergyarto }}</td>
+            <td>{{ muszer.muszer.muszertipus.muszerfajta }}</td>
+            <td>{{ muszer.muszer.muszertipus.muszergyarto }}</td>
             <td>{{ muszer.muszer.muszertipus }}</td>
             <td>{{ muszer.muszer.gyariszam }}</td>
             <td>{{ muszer.muszer.elhelyezkedes }}</td>
