--- a/szabalyozok/templates/szabalyozok/szabtart_show.html
+++ b/szabalyozok/templates/szabalyozok/szabtart_show.html
@@ -67,8 +67,8 @@
         <tbody>
         {% for muszer in muszerek %}
         <tr>
-            <td>{{ muszer.muszerfajta }}</td>
-            <td>{{ muszer.muszergyarto }}</td>
+            <td>{{ muszer.muszertipus.muszerfajta }}</td>
+            <td>{{ muszer.muszertipus.muszergyarto }}</td>
             <td>{{ muszer.muszertipus }}</td>
             <td>{{ muszer.mereshatar1 }}</td>
             <td>{{ muszer.mereshatar2 }}</td>
