Műszer egyedi előtt

--- a/szabalyozok/templates/szabalyozok/layout.html
+++ b/szabalyozok/templates/szabalyozok/layout.html
@@ -48,6 +48,9 @@
                         <li role="separator" class="divider"></li>
                         <li><a href="{% url 'riport_szabmunkak' %}">Szabályozó munkák</a></li>
                         <li><a href="{% url 'riport_muszermunkak' %}">Műszer munkák</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="{% url 'api_szabalyozok' %}">Új szab. riport</a></li>
+                        <li><a href="{% url 'api_tartozekok' %}">Új tartozékok riport</a></li>
                     </ul>
                 </li>
                 {% endif %}
