--- a/szabalyozok/templates/szabalyozok/riport_szabmunkak.html
+++ b/szabalyozok/templates/szabalyozok/riport_szabmunkak.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Szabályozó munkák</h1>
-
+{{ het }}
 <table id="riport" class="table table-bordered" cellspacing="0" width="100%">
     <thead>
     <tr>
