--- a/szabalyozok/templates/szabalyozok/loginpartial.html
+++ b/szabalyozok/templates/szabalyozok/loginpartial.html
@@ -2,7 +2,7 @@
 <form id="logoutForm" action="/logout" method="post" class="navbar-right">
     {% csrf_token %}
     <ul class="nav navbar-nav navbar-right">
-        <li><span class="navbar-brand">Helló {{ user.username }}!</span></li>
+        <li><span class="navbar-brand">Üdvözöllek {{ user.first_name }}!</span></li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Kilépés</a></li>
     </ul>
 
