--- a/szabalyozok/templates/szabalyozok/szabterkep.html
+++ b/szabalyozok/templates/szabalyozok/szabterkep.html
@@ -40,7 +40,6 @@
 {% else %}
 <p> Nincs GSP koordináta megadva! </p>
 {% endif %}
-<script src="https://maps.googleapis.com/maps/api/js?AIzaSyCbJemp5eDWNNbZ_-Ce_ZR0yd6cNiSnLgA&callback=initMap" async
-        defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?client=gme-tigazzrt&v=3.27&callback=initMap"></script>
 </body>
 </html>
